# yesod-admin

./: LICENSE  README.md  README.txt  index.html  yesod-admin.cabal
src/Yesod/: Admib.hs  Admin.hs
src/Yesod/Admin/: Class.hs  Crud.hs  Dispatch.hs  Handlers.hs  Helpers.hs  Message.hs  Render.hs  Resource.hs  Routes.hs  Subsite.hs  TH.hs  Types.hs
src/Yesod/Admin/Handlers/: AdminCreateR.hs  AdminDeleteR.hs  AdminListR.hs  AdminPageR.hs  AdminReadR.hs  AdminUpdateR.hs  Helpers.hs  Internal.hs
src/Yesod/Admin/Handlers/Internal/: ActionR.hs  AdminActionR.hs  AdminCreateR.hs  AdminDeleteR.hs  AdminListR.hs  AdminPageR.hs  AdminReadR.hs  AdminUpdateR.hs  CreateR.hs  DeleteR.hs  Helpers.hs  ListR.hs  PageR.hs  ReadR.hs  UpdateR.hs
src/Yesod/Admin/Helpers/: Text.hs
src/Yesod/Admin/Message/: English.hs
src/Yesod/Admin/Render/: Default.hs  Defaults.hs
src/Yesod/Admin/TH/: Entity.hs  Error.hs  Helpers.hs  Site.hs
src/Yesod/Admin/TH/Entity/: AdminInterface.hs  I18N.hs
templates/: admin.cassius  button.cassius  buttons.cassius  listing.cassius  listing.hamlet  table.cassius
templates/render/default/: admin-layout.hamlet  attribute-display.hamlet  button.hamlet
