Name: yesod-admin
Version: 0.1
Synopsis: An admin interface for persistent data

Description: This library provides combinators to build admin sites
  for Yesod applications. Recall that the standard way to provide
  database agnostic persistent storage for Yesod applications is via
  persistent package. Using this library, one can provide sites for
  common CRUD operations on these storage elements.
             
Homepage: http://github.com/piyush-kurur/yesod-admin
License: BSD3
License-file: LICENSE
Author: Piyush P Kurur
Maintainer: ppk@cse.iitk.ac.in
Category: Web, Yesod
Build-type: Simple
Cabal-version: >=1.2
Library
  Hs-source-dirs: src
  GHC-Options: -Wall
  Exposed-modules: Yesod.Admin
                 , Yesod.Admin.Class
                 , Yesod.Admin.Subsite
                 , Yesod.Admin.Types
                 , Yesod.Admin.TH
                 , Yesod.Admin.TH.Entity
   --                 , Yesod.Admin.TH.Site
   --                 , Yesod.Admin.Render
   --                 , Yesod.Admin.Render.Defaults
   --                 , Yesod.Admin.Handlers
  
  Other-modules: Yesod.Admin.Helpers
                , Yesod.Admin.TH.Helpers
--                , Yesod.Admin.Handlers.Helpers
--             , Yesod.Admin.Handlers.Internal
--             , Yesod.Admin.Handlers.Internal.AdminListR
--             , Yesod.Admin.Handlers.Internal.AdminPageR
--             , Yesod.Admin.Handlers.Internal.AdminCreateR
--             , Yesod.Admin.Handlers.Internal.AdminReadR
--             , Yesod.Admin.Handlers.Internal.AdminUpdateR
--             , Yesod.Admin.Handlers.Internal.AdminDeleteR
--             , Yesod.Admin.Dispatch
  Build-depends: base
               , time
               , old-locale
               , text
               , bytestring
               , blaze-html
               , template-haskell
               , yesod >=0.10 && <0.11
               , yesod-auth >=0.8 && <0.9
               , shakespeare-css >=0.10 && <0.11
               , hamlet >=0.10 && <0.11
               , persistent >=0.8 && <0.9
