Name: yesod-admin
Version: 0.1
Synopsis: An admin interface for persistent data

Description: This library provides combinators to build admin sites
  for Yesod applications. Recall that the standard way to provide
  database agnostic persistent storage for Yesod applications is via
  persistent package. Using this library, one can provide sites for
  common CRUD operations on these storage elements.
             
Homepage: http://github.com/piyush-kurur/yesod-admin
License: BSD3
License-file: LICENSE
Author: Piyush P Kurur
Maintainer: ppk@cse.iitk.ac.in
Category: Web, Yesod
Build-type: Simple
Cabal-version: >=1.2
Library
  Hs-source-dirs: src
  GHC-Options: -Wall
  Exposed-modules: Yesod.Admin
                 , Yesod.Admin.Class
                 , Yesod.Admin.Types
                 , Yesod.Admin.TH
                 , Yesod.Admin.TH.Entity
                 , Yesod.Admin.Message
                 , Yesod.Admin.Message.English
                 , Yesod.Admin.Render
                 , Yesod.Admin.Render.Defaults
   --                 , Yesod.Admin.TH.Site
   --                 , Yesod.Admin.Handlers
  
  Other-modules: Yesod.Admin.Helpers
               , Yesod.Admin.Helpers.Text
               , Yesod.Admin.Resource
               , Yesod.Admin.Routes
               , Yesod.Admin.TH.Helpers
--                , Yesod.Admin.Handlers.Helpers
               , Yesod.Admin.Handlers.Internal
               , Yesod.Admin.Handlers.Internal.Helpers
               , Yesod.Admin.Handlers.Internal.ReadR
               , Yesod.Admin.Handlers.Internal.ListR
               , Yesod.Admin.Handlers.Internal.PageR
               , Yesod.Admin.Handlers.Internal.CreateR
               , Yesod.Admin.Handlers.Internal.UpdateR
               , Yesod.Admin.Handlers.Internal.DeleteR
               , Yesod.Admin.Dispatch
  Build-depends: base
               , time
               , old-locale
               , text
               , bytestring
               , blaze-html
               , template-haskell
               , containers
               , data-default
               , yesod >=1.0 && <1.1
               , yesod-auth >=1.0 && <1.1
               , yesod-form >=1.0 && <1.1
               , yesod-routes >= 1.0 && < 1.1
               , shakespeare-css >=1.0 && <1.1
               , hamlet >=1.0 && <1.1
               , persistent >=0.9 && <0.10
